crates/sui-prover/tests/snapshots/spec_purity/spec_purity_mut_ref.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused variable
   ┌─ tests/inputs/spec_purity/spec_purity_mut_ref.move:10:20
   │
10 │ public fun sub_foo(a: &mut u64) {
   │                    ^ Unused parameter 'a'. Consider removing or prefixing with an underscore: '_a'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Consider removing non-pure calls form spec
   ┌─ tests/inputs/spec_purity/spec_purity_mut_ref.move:21:3
   │
21 │   sub_foo(&mut a);
   │   ^^^^^^^^^^^^^^^
